--- a/authenticator/src/debug/res/xml/authenticator.xml
+++ b/authenticator/src/debug/res/xml/authenticator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="com.mohdroid.authentication.release"
+    android:accountType="com.mohdroid.authentication.debug"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:smallIcon="@mipmap/ic_launcher_round"/>
