Add setAccountVisibility feature and fix bug for request access from user

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,5 +55,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addAccount" />
 
+    <Button
+        android:id="@+id/setVisibleAccount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="setAccountVisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/getOthersAccounts" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
