--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,13 +47,23 @@
         app:layout_constraintTop_toBottomOf="@id/getAuthToken" />
 
     <Button
+        android:id="@+id/getOtherBuildTypeAccount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="getOthersBuildTypeAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addAccount" />
+
+    <Button
         android:id="@+id/getOthersAccounts"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="getOthersAccounts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addAccount" />
+        app:layout_constraintTop_toBottomOf="@id/getOtherBuildTypeAccount" />
+
 
     <Button
         android:id="@+id/setVisibleAccount"
