--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="24dp"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
-
+    <TextView
+        android:textColor="@color/black"
+        tools:text="com.mohdroid.authentication.debug"
+        android:id="@+id/tvPackageName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/invalidateAuthToken"
@@ -16,7 +26,7 @@
         android:text="invalidateAuthToken"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tvPackageName"/>
 
     <Button
         android:id="@+id/getAuthTokenByFeature"
